--- a/package.json
+++ b/package.json
@@ -23,6 +23,10 @@
     {
       "name": "Roman Stercken",
       "email": "roman.stercken@n-fuse.de"
+    },
+    {
+      "name": "Thomas Hoppe",
+      "email": "thomas.hoppe@n-fuse.de"
     }
   ],
   "scripts": {
